# Bachelorprojekt

./: .gitignore  Bachelorprojekt.cabal  Møde-02-01-2010  TODO  gobby  ideer  plc-forslag.tex
cps/: cps-patch
forsvar-plc/: plc.tex
forsvar/ulrik/: report.tex  trees.dot  trees2.dot
hcc-project-seminar/: join-calculus.tex
interp/src/: Language.hs  Main.hs  Parser.hs
papers/join-calculus/: cham.ps  timed-join-calculus.ps
papers/pi-calculus/: the_polyadic_pi-calculus.ps
project_ideas/fladuino_extension/: bibliography.bib  report.tex
report/: Makefile  abstract.tex  dispositioner  macros.tex  preface.tex  report.tex
report/appendix/: RetransmitClient.ps  RetransmitServer.ps  Sensor.ps  Server.ps  Unreliable.ps
report/bib/: bibliography.bib
report/chap/: future.tex  general-discussion.tex  implementation.tex  introduction.tex  join-evaluation.tex  language.tex  retransmission.tex  use-cases.tex
research/join-calculus/: Fournet-join-popl.ps  mobile.ps
src/examples/: fib.join  intTest.join  list.join  mult.join  stack.join  test.join  test2.join  test3.join
src/interp/: Aux.hs  BUGS.rst  Desugar.hs  GlobalInterpreter.hs  Interpreter.hs  JoinApi.hs  Language.hs  Main.hs  Parser.hs  Session.vim  tags  test.join
src/interp/UseCases/: A.join  B.join  Retransmit.hs  Simple  (+15 more)
src/misc/: join.vim  noweb.vim
synopsis/: fladuino-ext  fladuino-synopsis  join-synopsis  join-synopsis.bib  join-synopsis.tex
workdoc/: Locations  Status-06-04  checklist  goals-05052010  mail-03-05-2010  mail-10-05  plc-progress-06-06  use-cases
workdoc/use_cases/: use-cases
